[package]
name = "assert_fs"
version = "1.0.6"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Filesystem fixtures and assertions for testing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/assert_fs.git"
homepage = "https://github.com/assert-rs/assert_fs"
documentation = "http://docs.rs/assert_fs/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["filesystem", "test", "assert", "fixture"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/assert_fs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
color = ["yansi", "concolor", "predicates/color"]
color-auto = ["color", "concolor/auto"]

[dependencies]
tempfile = "3.0"
globwalk = "0.8"
predicates = { version = "2.0.3", default-features = false, features = ["diff"] }
predicates-core = "1.0"
predicates-tree = "1.0"
doc-comment = "0.3"
yansi = { version = "0.5.0", optional = true }
concolor = { version = "0.0.8", optional = true }
